2005-12-05  Derek Price  <derek@ximbiot.com>

	* cvs.h (Register): Move proto to...
	* entries.h: ...here.  Include hash.h.
	* entries.c (Entnode_Destroy): Add traces.
	* hash.c: Verify interface.
	* hash.h: Include <stddef.h> for size_t.
	* update.c (update_fileproc): Fix vers_ts->entdata after a merge.

	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.  Other minor corrections.

2005-12-02  Derek Price  <derek@ximbiot.com>

	* base.c (base_remove), rcs,c (RCS_checkin), server.c (server_updated):
	 Add traces.
	* client.c (update_entries): Don't assume UPDATE_ENTRIES_CHECKIN
	actually means this was a checkin.
	* server.c (server_base_checkout): Name (tag) changes could also create
	a diff.

	* checkin.c (Checkin): Actually pass the previous options.

	* server.c (server_base_checkout), server.h: Accept new previous tag
	and options arguments and use them when checking out the previous
	revision to build a diff.
	* base.c (base_checkout, base_merge): Accept new previous tag and
	previous options arguments and pass them through to
	server_base_checkout.
	* add.c, base.c, base.h, checkin.c, update.c: Update all references.

	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.  Other minor corrections.

2005-12-01  Derek Price  <derek@ximbiot.com>

	* client.c (client_base_merge): Print `Merging differences' message
	only when !REALLY_QUIET.
	(handle_base_merged): New function.
	(responses): Add Base-merged.
	* server.c (server_updated): Send Base-merged for merges.
	* update.c (join_file): Handle replacing files and binaries correctly.

	* client.c (base_merge_rev1, base_merge_rev2, last_merge_no_change):
	New globals.
	(update_entries): Delete merge temp files when not needed.  Don't
	ignore merges (only joins), since rev changes.
	(merge): Skip deleting temp files since this function cannot know which
	is needed.
	* edit.c (edit_file): Deal with read-only edit base files.
